    imbalance.  (robs)
  o New --effects-file option to read effects and arguments from
    a file instead of command line. (cbagwell)
  o `filter' effect now supports --plot.  (robs)
  o Improved documentation for the `stat' effect.  (robs)
  o Fix broken audio pass-through with noiseprof effect.  (robs)
  o Fix graph legend display when using --plot octave.  (robs)

Other new features:

  o New --output option to write to multiple files in one run.
    Only useful with certain effects like trim and silence. (cbagwell)
  o Display SoX build environment information with -V -V.  (robs)
  o Display (with -V) the detected file-type if it differs from the 
    file extension.  (robs)
  o New -t option for soxi; to display the detected file type.  (robs)
  o New -b/--bits, -e/--encoding alternative options for specifying
    audio encoding parameters.  (robs)
  o [FR 1958680] Support more than 32 input files.  (robs)

Other bug fixes:

  o Bump library version because it was not binary compatible with
    SoX 14.0.1 (Pascal Giard)
  o Turn off versioning of special libsox_fmt* libraries since thats
    not really needed.  (kwizart)
  o Fixed crash when running play with no arguments. (Dan Nelson)
  o Allow libpng to be found with -static option. (cbagwell)
  o Allow libsamplerate to be found if pkg-config is installed but
    no samplerate.pc exists. (cbagwell)
  o [2038855] external lpc10 lib patch.  (Oden Eriksson, Mandriva)
  o Fix memory leaks in effects chain when restarting effects. (cbagwell)
  o Fixed pkg-config CFLAGS. (evilynux)

Internal improvements:

  o Fixed all compiler warnings (with gcc 4.3.1, 64-bit arch.).  (robs)
  o Updates to internal effects chain API.  (cbagwell)
  o Retire old FFT routines (speeds up `noisered' effect).  (robs)
  o Allow effects to use getopt.  (robs)


sox-14.1.0	2008-7-29
----------

Previously deprecated features that have been removed in this release:

  Deprec-  Feature    [O(ption)]