@@ -64,8 +64,10 @@ Effects:
 
 Other new features:
 
-  o New --output option to write to multiple files in one run.
-    Only useful with certain effects like trim and silence. (cbagwell)
+  o New psuedo-effects "newfile" and ":" to allow running
+    multiple effect chains on a single file.  newfile will
+    create a new output file when an effect chain terminates.
+    Of most use with trim and silence effects. (cbagwell)
   o Display SoX build environment information with -V -V.  (robs)
   o Display (with -V) the detected file-type if it differs from the 
     file extension.  (robs)
